# org-as-code

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  THEORY.md  fdm.py  org_cli.py  org_mcp_server.py  pyproject.toml
examples/: README.md
examples/PERF-001/: P.0_proposal.md  P.1_implementation.md  V.0_review.yaml  V.1_verification.yaml
examples/SEC-001/: P.0_proposal.md  P.1_revised_proposal.md  P.2_implementation.md  V.0_review.yaml  V.1_review.yaml  V.2_verification.yaml
processes/: .gitkeep
protocol/: config.yaml
protocol/process_templates/: bugfix.yaml  feature.yaml  feature_v2.yaml
registry/: agents.yaml  artifacts.jsonl  attractors.yaml  fdm.json  health_metrics.yaml  state.yaml  tensions.yaml
tests/: test_cli_and_chain.py  test_cli_deps.py  test_energy.py  test_fdm.py  test_fdm_integration.py  test_per_process_state.py  test_security.py
tools/: fix_hash_chain.py  per_process_state.py
